.metadata/.plugins/org.eclipse.cdt.ui/tree-2.51.build.log
17:17:10 **** Build of configuration Debug for project tree-2.51 ****
make all 
Building file: ../test_tree.cc
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test_tree.d" -MT"test_tree.d" -o "test_tree.o" "../test_tree.cc"
In file included from ../test_tree.cc:23:0:
../tree.hh:136:21: error: ‘ptrdiff_t’ does not name a type
             typedef ptrdiff_t                       difference_type;
                     ^
In file included from /usr/include/c++/4.8/bits/stl_algobase.h:65:0,
                 from /usr/include/c++/4.8/memory:62,
                 from ../tree.hh:63,
                 from ../test_tree.cc:23:
/usr/include/c++/4.8/bits/stl_iterator_base_types.h: In instantiation of ‘struct std::iterator_traits<tree<std::basic_string<char> >::pre_order_iterator>’:
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:201:5:   required by substitution of ‘template<class _Iter> typename std::iterator_traits<_Iterator>::iterator_category std::__iterator_category(const _Iter&) [with _Iter = tree<std::basic_string<char> >::pre_order_iterator]’
/usr/include/c++/4.8/bits/stl_algo.h:4441:44:   required from ‘_IIter std::find(_IIter, _IIter, const _Tp&) [with _IIter = tree<std::basic_string<char> >::pre_order_iterator; _Tp = std::basic_string<char>]’
../test_tree.cc:163:57:   required from here
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:167:53: error: no type named ‘difference_type’ in ‘class tree<std::basic_string<char> >::pre_order_iterator’
       typedef typename _Iterator::difference_type   difference_type;
                                                     ^
In file included from ../test_tree.cc:23:0:
../tree.hh: In instantiation of ‘void tree<T, tree_node_allocator>::merge(tree<T, tree_node_allocator>::sibling_iterator, tree<T, tree_node_allocator>::sibling_iterator, tree<T, tree_node_allocator>::sibling_iterator, tree<T, tree_node_allocator>::sibling_iterator, bool) [with T = std::basic_string<char>; tree_node_allocator = std::allocator<tree_node_<std::basic_string<char> > >]’:
../test_tree.cc:333:81:   required from here
../tree.hh:1472:43: error: no matching function for call to ‘find(tree<std::basic_string<char> >::sibling_iterator&, tree<std::basic_string<char> >::sibling_iterator&, std::basic_string<char>&)’
       if((fnd=std::find(to1, to2, (*from1))) != to2) { // element found
                                           ^
../tree.hh:1472:43: note: candidate is:
In file included from /usr/include/c++/4.8/bits/locale_facets.h:48:0,
                 from /usr/include/c++/4.8/bits/basic_ios.h:37,
                 from /usr/include/c++/4.8/ios:44,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iterator:64,
                 from ../tree.hh:65,
                 from ../test_tree.cc:23:
/usr/include/c++/4.8/bits/streambuf_iterator.h:369:5: note: template<class _CharT2> typename __gnu_cxx::__enable_if<std::__is_char<_CharT2>::__value, std::istreambuf_iterator<_CharT> >::__type std::find(std::istreambuf_iterator<_CharT>, std::istreambuf_iterator<_CharT>, const _CharT2&)
     find(istreambuf_iterator<_CharT> __first,
     ^
/usr/include/c++/4.8/bits/streambuf_iterator.h:369:5: note:   template argument deduction/substitution failed:
In file included from ../test_tree.cc:23:0:
../tree.hh:1472:43: note:   ‘tree<std::basic_string<char> >::sibling_iterator’ is not derived from ‘std::istreambuf_iterator<_CharT>’
       if((fnd=std::find(to1, to2, (*from1))) != to2) { // element found
                                           ^
make: *** [test_tree.o] Error 1

17:17:11 Build Finished (took 597ms)

